src/grammarFiles/TrabalhoFinal2016_1Parser.java
package grammarFiles;
// Generated from C:\Users\layca\Google Drive\UNIVERSIDADE\2016.1\Constru��o de Compiladores\Trabalho Final 2016.1\TrabalhoFinal2016_1.g4 by ANTLR 4.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class TrabalhoFinal2016_1Parser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__39=1, T__38=2, T__37=3, T__36=4, T__35=5, T__34=6, T__33=7, T__32=8, 
		T__31=9, T__30=10, T__29=11, T__28=12, T__27=13, T__26=14, T__25=15, T__24=16, 
		T__23=17, T__22=18, T__21=19, T__20=20, T__19=21, T__18=22, T__17=23, 
		T__16=24, T__15=25, T__14=26, T__13=27, T__12=28, T__11=29, T__10=30, 
		T__9=31, T__8=32, T__7=33, T__6=34, T__5=35, T__4=36, T__3=37, T__2=38, 
		T__1=39, T__0=40, STRING=41, BOOLEAN=42, ID=43, INT=44, REAL=45, WS=46, 
		SL_COMMENT=47, SL_COMMENTM=48;
	public static final String[] tokenNames = {
		"<INVALID>", "'read'", "']'", "','", "'exit'", "'['", "'while'", "'-'", 
		"'*'", "'('", "':'", "'if'", "'program'", "'int'", "'<'", "'main'", "'!='", 
		"'<='", "'{'", "'break'", "'final'", "'else'", "'}'", "'boolean'", "')'", 
		"'step'", "'+'", "'print'", "'for'", "'<>'", "'return'", "'='", "';'", 
		"'>'", "'then'", "'string'", "'=='", "'/'", "'>='", "'!'", "'real'", "STRING", 
		"BOOLEAN", "ID", "INT", "REAL", "WS", "SL_COMMENT", "SL_COMMENTM"
	};
	public static final int
		RULE_prog = 0, RULE_declaracao = 1, RULE_declaracao_var = 2, RULE_var = 3, 
		RULE_lista_ids = 4, RULE_declaracao_const = 5, RULE_constante = 6, RULE_valor = 7, 
		RULE_declaracao_Arrays = 8, RULE_lista_arrays = 9, RULE_array = 10, RULE_tipo = 11, 
		RULE_funcao = 12, RULE_nome_funcao = 13, RULE_lista_de_parametros = 14, 
		RULE_parametro = 15, RULE_comandos = 16, RULE_cmd_return = 17, RULE_chamada_funcao = 18, 
		RULE_lista_expr = 19, RULE_comando_else = 20, RULE_cmd_controle = 21, 
		RULE_condicoes = 22, RULE_cmd_atribuicao = 23, RULE_cmd_atrib_var = 24, 
		RULE_cmd_atrib_array = 25, RULE_oprelacional = 26, RULE_expr = 27, RULE_numero = 28, 
		RULE_principal = 29;
	public static final String[] ruleNames = {
		"prog", "declaracao", "declaracao_var", "var", "lista_ids", "declaracao_const", 
		"constante", "valor", "declaracao_Arrays", "lista_arrays", "array", "tipo", 
		"funcao", "nome_funcao", "lista_de_parametros", "parametro", "comandos", 
		"cmd_return", "chamada_funcao", "lista_expr", "comando_else", "cmd_controle", 
		"condicoes", "cmd_atribuicao", "cmd_atrib_var", "cmd_atrib_array", "oprelacional", 
		"expr", "numero", "principal"
	};

	@Override
	public String getGrammarFileName() { return "TrabalhoFinal2016_1.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public ATN getATN() { return _ATN; }

	public TrabalhoFinal2016_1Parser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgContext extends ParserRuleContext {
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
	 
		public ProgContext() { }
		public void copyFrom(ProgContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class BodyContext extends ProgContext {
		public DeclaracaoContext declaracao(int i) {
			return getRuleContext(DeclaracaoContext.class,i);
		}
		public FuncaoContext funcao(int i) {
			return getRuleContext(FuncaoContext.class,i);
		}
		public List<DeclaracaoContext> declaracao() {
			return getRuleContexts(DeclaracaoContext.class);
		}
		public TerminalNode ID() { return getToken(TrabalhoFinal2016_1Parser.ID, 0); }
		public List<FuncaoContext> funcao() {
			return getRuleContexts(FuncaoContext.class);
		}
		public PrincipalContext principal() {
			return getRuleContext(PrincipalContext.class,0);
		}
		public BodyContext(ProgContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TrabalhoFinal2016_1Listener ) ((TrabalhoFinal2016_1Listener)listener).enterBody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TrabalhoFinal2016_1Listener ) ((TrabalhoFinal2016_1Listener)listener).exitBody(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TrabalhoFinal2016_1Visitor ) return ((TrabalhoFinal2016_1Visitor<? extends T>)visitor).visitBody(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		int _la;
		try {
			int _alt;
			_localctx = new BodyContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(60); match(12);
			setState(61); match(ID);
			setState(62); match(32);
			setState(66);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=-1 ) {
				if ( _alt==1 ) {
					{
					{
					setState(63); declaracao();
					}
					} 
				}
				setState(68);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			setState(72);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << 13) | (1L << 23) | (1L << 35) | (1L << 40))) != 0)) {
				{
				{
				setState(69); funcao();
				}
				}
				setState(74);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(75); principal();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclaracaoContext extends ParserRuleContext {
		public DeclaracaoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracao; }
	 
		public DeclaracaoContext() { }
		public void copyFrom(DeclaracaoContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class DeclaarcaoVariaveisContext extends DeclaracaoContext {
		public Declaracao_varContext declaracao_var() {
			return getRuleContext(Declaracao_varContext.class,0);
		}
		public DeclaarcaoVariaveisContext(DeclaracaoContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TrabalhoFinal2016_1Listener ) ((TrabalhoFinal2016_1Listener)listener).enterDeclaarcaoVariaveis(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TrabalhoFinal2016_1Listener ) ((TrabalhoFinal2016_1Listener)listener).exitDeclaarcaoVariaveis(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TrabalhoFinal2016_1Visitor ) return ((TrabalhoFinal2016_1Visitor<? extends T>)visitor).visitDeclaarcaoVariaveis(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class DeclaarcaoArraysContext extends DeclaracaoContext {
		public Declaracao_ArraysContext declaracao_Arrays() {
			return getRuleContext(Declaracao_ArraysContext.class,0);
		}
		public DeclaarcaoArraysContext(DeclaracaoContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TrabalhoFinal2016_1Listener ) ((TrabalhoFinal2016_1Listener)listener).enterDeclaarcaoArrays(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TrabalhoFinal2016_1Listener ) ((TrabalhoFinal2016_1Listener)listener).exitDeclaarcaoArrays(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TrabalhoFinal2016_1Visitor ) return ((TrabalhoFinal2016_1Visitor<? extends T>)visitor).visitDeclaarcaoArrays(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class DeclaarcaoConstantesContext extends DeclaracaoContext {
		public Declaracao_constContext declaracao_const() {
			return getRuleContext(Declaracao_constContext.class,0);
		}
		public DeclaarcaoConstantesContext(DeclaracaoContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TrabalhoFinal2016_1Listener ) ((TrabalhoFinal2016_1Listener)listener).enterDeclaarcaoConstantes(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TrabalhoFinal2016_1Listener ) ((TrabalhoFinal2016_1Listener)listener).exitDeclaarcaoConstantes(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TrabalhoFinal2016_1Visitor ) return ((TrabalhoFinal2016_1Visitor<? extends T>)visitor).visitDeclaarcaoConstantes(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclaracaoContext declaracao() throws RecognitionException {
		DeclaracaoContext _localctx = new DeclaracaoContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_declaracao);
		try {
			setState(80);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				_localctx = new DeclaarcaoVariaveisContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(77); declaracao_var();
				}
				break;

			case 2:
				_localctx = new DeclaarcaoConstantesContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(78); declaracao_const();
				}
				break;

			case 3:
				_localctx = new DeclaarcaoArraysContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(79); declaracao_Arrays();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Declaracao_varContext extends ParserRuleContext {
		public Declaracao_varContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracao_var; }
	 
		public Declaracao_varContext() { }
		public void copyFrom(Declaracao_varContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class DeclaracaoVariavelContext extends Declaracao_varContext {
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public VarContext var() {
			return getRuleContext(VarContext.class,0);
		}
		public DeclaracaoVariavelContext(Declaracao_varContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TrabalhoFinal2016_1Listener ) ((TrabalhoFinal2016_1Listener)listener).enterDeclaracaoVariavel(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TrabalhoFinal2016_1Listener ) ((TrabalhoFinal2016_1Listener)listener).exitDeclaracaoVariavel(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TrabalhoFinal2016_1Visitor ) return ((TrabalhoFinal2016_1Visitor<? extends T>)visitor).visitDeclaracaoVariavel(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Declaracao_varContext declaracao_var() throws RecognitionException {
		Declaracao_varContext _localctx = new Declaracao_varContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_declaracao_var);
		try {
			_localctx = new DeclaracaoVariavelContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(82); tipo();
			setState(83); match(10);
			setState(84); var();
			setState(85); match(32);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarContext extends ParserRuleContext {
		public VarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_var; }
	 
		public VarContext() { }
		public void copyFrom(VarContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class VariavelContext extends VarContext {
		public Lista_idsContext lista_ids() {
			return getRuleContext(Lista_idsContext.class,0);
		}
		public VariavelContext(VarContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TrabalhoFinal2016_1Listener ) ((TrabalhoFinal2016_1Listener)listener).enterVariavel(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TrabalhoFinal2016_1Listener ) ((TrabalhoFinal2016_1Listener)listener).exitVariavel(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TrabalhoFinal2016_1Visitor ) return ((TrabalhoFinal2016_1Visitor<? extends T>)visitor).visitVariavel(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VarContext var() throws RecognitionException {
		VarContext _localctx = new VarContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_var);
		try {
			_localctx = new VariavelContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(87); lista_ids();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Lista_idsContext extends ParserRuleContext {
		public Lista_idsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lista_ids; }
	 
		public Lista_idsContext() { }
		public void copyFrom(Lista_idsContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class IdentificadorContext extends Lista_idsContext {
		public TerminalNode ID() { return getToken(TrabalhoFinal2016_1Parser.ID, 0); }
		public IdentificadorContext(Lista_idsContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TrabalhoFinal2016_1Listener ) ((TrabalhoFinal2016_1Listener)listener).enterIdentificador(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TrabalhoFinal2016_1Listener ) ((TrabalhoFinal2016_1Listener)listener).exitIdentificador(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TrabalhoFinal2016_1Visitor ) return ((TrabalhoFinal2016_1Visitor<? extends T>)visitor).visitIdentificador(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ListaIDsContext extends Lista_idsContext {
		public Lista_idsContext lista_ids() {
			return getRuleContext(Lista_idsContext.class,0);
		}
		public TerminalNode ID() { return getToken(TrabalhoFinal2016_1Parser.ID, 0); }
		public ListaIDsContext(Lista_idsContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TrabalhoFinal2016_1Listener ) ((TrabalhoFinal2016_1Listener)listener).enterListaIDs(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TrabalhoFinal2016_1Listener ) ((TrabalhoFinal2016_1Listener)listener).exitListaIDs(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TrabalhoFinal2016_1Visitor ) return ((TrabalhoFinal2016_1Visitor<? extends T>)visitor).visitListaIDs(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Lista_idsContext lista_ids() throws RecognitionException {
		Lista_idsContext _localctx = new Lista_idsContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_lista_ids);
		try {
			setState(93);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				_localctx = new ListaIDsContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(89); match(ID);
				setState(90); match(3);
				setState(91); lista_ids();
				}
				break;

			case 2:
				_localctx = new IdentificadorContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(92); match(ID);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Declaracao_constContext extends ParserRuleContext {
		public Declaracao_constContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracao_const; }
	 
		public Declaracao_constContext() { }
		public void copyFrom(Declaracao_constContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class DeclaracaoConstanteContext extends Declaracao_constContext {
		public ConstanteContext constante() {
			return getRuleContext(ConstanteContext.class,0);
		}
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public ValorContext valor() {
			return getRuleContext(ValorContext.class,0);
		}
		public DeclaracaoConstanteContext(Declaracao_constContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TrabalhoFinal2016_1Listener ) ((TrabalhoFinal2016_1Listener)listener).enterDeclaracaoConstante(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TrabalhoFinal2016_1Listener ) ((TrabalhoFinal2016_1Listener)listener).exitDeclaracaoConstante(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TrabalhoFinal2016_1Visitor ) return ((TrabalhoFinal2016_1Visitor<? extends T>)visitor).visitDeclaracaoConstante(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Declaracao_constContext declaracao_const() throws RecognitionException {
		Declaracao_constContext _localctx = new Declaracao_constContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_declaracao_const);
		try {
			_localctx = new DeclaracaoConstanteContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(95); match(20);
			setState(96); tipo();
			setState(97); constante();
			setState(98); match(31);
			setState(99); valor();
			setState(100); match(32);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConstanteContext extends ParserRuleContext {
		public ConstanteContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constante; }
	 
		public ConstanteContext() { }
		public void copyFrom(ConstanteContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ConstanteIDContext extends ConstanteContext {
		public TerminalNode ID() { return getToken(TrabalhoFinal2016_1Parser.ID, 0); }
		public ConstanteIDContext(ConstanteContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TrabalhoFinal2016_1Listener ) ((TrabalhoFinal2016_1Listener)listener).enterConstanteID(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TrabalhoFinal2016_1Listener ) ((TrabalhoFinal2016_1Listener)listener).exitConstanteID(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TrabalhoFinal2016_1Visitor ) return ((TrabalhoFinal2016_1Visitor<? extends T>)visitor).visitConstanteID(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConstanteContext constante() throws RecognitionException {
		ConstanteContext _localctx = new ConstanteContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_constante);
		try {
			_localctx = new ConstanteIDContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(102); match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ValorContext extends ParserRuleContext {
		public ValorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_valor; }
	 
		public ValorContext() { }
		public void copyFrom(ValorContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ValorInteiroContext extends ValorContext {
		public TerminalNode INT() { return getToken(TrabalhoFinal2016_1Parser.INT, 0); }
		public ValorInteiroContext(ValorContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TrabalhoFinal2016_1Listener ) ((TrabalhoFinal2016_1Listener)listener).enterValorInteiro(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TrabalhoFinal2016_1Listener ) ((TrabalhoFinal2016_1Listener)listener).exitValorInteiro(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TrabalhoFinal2016_1Visitor ) return ((TrabalhoFinal2016_1Visitor<? extends T>)visitor).visitValorInteiro(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ValorBooleanContext extends ValorContext {
		public TerminalNode BOOLEAN() { return getToken(TrabalhoFinal2016_1Parser.BOOLEAN, 0); }
		public ValorBooleanContext(ValorContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TrabalhoFinal2016_1Listener ) ((TrabalhoFinal2016_1Listener)listener).enterValorBoolean(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TrabalhoFinal2016_1Listener ) ((TrabalhoFinal2016_1Listener)listener).exitValorBoolean(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TrabalhoFinal2016_1Visitor ) return ((TrabalhoFinal2016_1Visitor<? extends T>)visitor).visitValorBoolean(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ValorRealContext extends ValorContext {
		public TerminalNode REAL() { return getToken(TrabalhoFinal2016_1Parser.REAL, 0); }
		public ValorRealContext(ValorContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TrabalhoFinal2016_1Listener ) ((TrabalhoFinal2016_1Listener)listener).enterValorReal(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TrabalhoFinal2016_1Listener ) ((TrabalhoFinal2016_1Listener)listener).exitValorReal(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TrabalhoFinal2016_1Visitor ) return ((TrabalhoFinal2016_1Visitor<? extends T>)visitor).visitValorReal(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ValorStringContext extends ValorContext {
		public TerminalNode STRING() { return getToken(TrabalhoFinal2016_1Parser.STRING, 0); }
		public ValorStringContext(ValorContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TrabalhoFinal2016_1Listener ) ((TrabalhoFinal2016_1Listener)listener).enterValorString(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TrabalhoFinal2016_1Listener ) ((TrabalhoFinal2016_1Listener)listener).exitValorString(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TrabalhoFinal2016_1Visitor ) return ((TrabalhoFinal2016_1Visitor<? extends T>)visitor).visitValorString(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ValorContext valor() throws RecognitionException {
		ValorContext _localctx = new ValorContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_valor);
		try {
			setState(108);
			switch (_input.LA(1)) {
			case INT:
				_localctx = new ValorInteiroContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(104); match(INT);
				}
				break;
			case REAL:
				_localctx = new ValorRealContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(105); match(REAL);
				}
				break;
			case STRING:
				_localctx = new ValorStringContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(106); match(STRING);
				}
				break;
			case BOOLEAN:
				_localctx = new ValorBooleanContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(107); match(BOOLEAN);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Declaracao_ArraysContext extends ParserRuleContext {
		public Declaracao_ArraysContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracao_Arrays; }
	 
		public Declaracao_ArraysContext() { }
		public void copyFrom(Declaracao_ArraysContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class DeclaracaoArrayContext extends Declaracao_ArraysContext {
		public Lista_arraysContext lista_arrays() {
			return getRuleContext(Lista_arraysContext.class,0);
		}
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public DeclaracaoArrayContext(Declaracao_ArraysContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TrabalhoFinal2016_1Listener ) ((TrabalhoFinal2016_1Listener)listener).enterDeclaracaoArray(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TrabalhoFinal2016_1Listener ) ((TrabalhoFinal2016_1Listener)listener).exitDeclaracaoArray(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TrabalhoFinal2016_1Visitor ) return ((TrabalhoFinal2016_1Visitor<? extends T>)visitor).visitDeclaracaoArray(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Declaracao_ArraysContext declaracao_Arrays() throws RecognitionException {
		Declaracao_ArraysContext _localctx = new Declaracao_ArraysContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_declaracao_Arrays);
		try {
			_localctx = new DeclaracaoArrayContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(110); tipo();
			setState(111); match(10);
			setState(112); lista_arrays();
			setState(113); match(32);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Lista_arraysContext extends ParserRuleContext {
		public Lista_arraysContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lista_arrays; }
	 
		public Lista_arraysContext() { }
		public void copyFrom(Lista_arraysContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ListaArraysContext extends Lista_arraysContext {
		public Lista_arraysContext lista_arrays() {
